# ziplib

./: CMakeLists.txt  Makefile
example/: compress.cpp  decompress.cpp
